# dfx-demo-py

./: .gitignore  Dockerfile  LICENSE.txt  README.md  dfxdemo.py  dfxpydemo.py  pyproject.toml  setup.cfg  setup.py
.github/workflows/: codeql.yml
dfxdemo/: asyncthing.py  clockspinner.py  default_args.py  defaults.py  dfxdemo.py  dfxextract.py  helpers.py  hfdemo.py  hfkiosk.py  hfrenderer.py  kettuspinner.py  kioskrequest.py  lerp.py  progressbar.py  pygamerenderer.py  pygametest.py  uitest.py
dfxpydemoutils/: __init__.py  dlib_tracker.py  opencvhelpers.py  renderer.py  utils.py
dfxutils/: app.py  dlib_tracker.py  mediapipe_tracker.py  mp_tasksvision_tracker.py  opencvhelpers.py  prettyprint.py  renderer.py  rpicamerahelpers.py  sdkhelpers.py  visage_tracker.py
dfxutils/res/: README.txt
wheels/: README.txt
